@startuml

title __BOARD's Class Diagram__\n

  namespace Board {
    class Board.BlueMarbleBoard {
        - cityList : City[]
        - height : int
        - tileMap : Tile[][]
        - turn : boolean
        - width : int
        + BlueMarbleBoard()
        + checkEnd()
        + drawAgent()
        + drawBoard()
        + drawDice()
        + getCityList()
        + getComputer()
        + getPlayer()
        + getTileMap()
        + getTurn()
        + roll_Dice()
        + setTurn()
    }
  }
  

  namespace Board {
    class Board.Tile {
        - x : int
        - y : int
        + Tile()
        + getCity()
        + getTileType()
        + getX()
        + getY()
        + setCity()
        + setTileType()
        + setX()
        + setY()
    }
  }
  

  Board.BlueMarbleBoard o-- Agent.Agent : computer
  Board.BlueMarbleBoard o-- Dice.Dice : dice
  Board.BlueMarbleBoard o-- Agent.Agent : player
  Board.Tile o-- City.City : city
  Board.Tile o-- Constants.Constants.TILE_TYPE : tileType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
